--- a/style.css
+++ b/style.css
@@ -30,14 +30,27 @@ html { box-sizing: border-box; }
 	font-family: 'Lora', serif;
 	font-family: 'Playfair Display', serif;
 
+	background-image: url(images/cupcake.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-color: #242424;
+
+	background: #242424 url(images/cupcake.jpg) no-repeat cover;
+
 */
 
 
 body {
 	margin: 0 auto;
-	font-family: 'Playfair Display', serif;
+	font-family: 'Lora', serif;
 	color: #242424
 }
+
+h1, h2, h3 {
+	font-family: 'Playfair Display', serif;
+}
+
+/* ******* Hlavička ******* */
 
 .hlavicka {
 	margin: 0 auto;
@@ -76,3 +89,33 @@ body {
 	border-radius: 20px;
 }
 
+
+/* *** Hero sekce s obrázkem a hlavním nadpisem *** */
+
+
+.hero {
+	color: #fff;
+	background-image: url(images/cupcake.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-color: #242424;
+	background-position: 0px -135px;
+}
+
+.obsah {
+	max-width: 1100px;
+	margin: 0 auto;
+	padding: 50px 0;
+}
+
+.hero h1 {
+	margin-top: 0;
+	font-size: 52px;
+	font-weight: 700;
+}
+
+.hero p {
+	font-size: 24px;
+	font-style: italic;
+	margin-bottom: 0;
+}
