--- a/style.css
+++ b/style.css
@@ -43,11 +43,17 @@ html { box-sizing: border-box; }
 body {
 	margin: 0 auto;
 	font-family: 'Lora', serif;
+	font-size: 18px;
 	color: #242424
 }
 
 h1, h2, h3 {
 	font-family: 'Playfair Display', serif;
+}
+
+h2 {
+	color: #3e606b;
+	font-size: 36px;
 }
 
 /* ******* Hlavička ******* */
@@ -118,4 +124,45 @@ h1, h2, h3 {
 	font-size: 24px;
 	font-style: italic;
 	margin-bottom: 0;
+}
+
+
+
+/* *** sekce Vítejte v naší cukrárně *** */
+
+.vitaci {
+	display: flex;
+	max-width: 1100px;
+	margin: 80px auto;
+}
+
+.leva {
+	padding: 30px;
+	flex: 1 0 50%;
+}
+
+
+.tlacitko {
+	margin-top: 60px;
+	margin-left: 5px;
+}
+
+.leva a {
+	color: #fff;
+	text-decoration: none;
+	background-color: #f195b2;
+	padding: 15px 40px;
+	border-radius: 30px;
+}
+
+.leva a:hover {
+	background-color: #d2567d;
+}
+
+.prava {
+	flex: 1 0 50%;
+}
+
+img {
+	display: block;
 }
